CKA/Lab/set2/web-load-5461.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: web
  name: web-load-5461
spec:
  containers:
  - image: nginx:1.17
    name: web-load-5461
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
