CKA/Lab/set2/web003.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-003
  name: web-003
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-003
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-003
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
